[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxrender"
version = "0.1.3"
authors = [
  { name="TodorokiBoy" }
]
description = "A high-performance engine for massive particle simulations and topological vector field visualization."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "taichi",
    "Pillow"
]

[project.urls]
"Homepage" = "https://TodorokiBoy.github.io/FluxRender/"
"Source" = "https://github.com/TodorokiBoy/FluxRender"

[tool.setuptools.packages.find]
include = ["FluxRender*"]
exclude = ["site*", "docs*"]